<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/BudgetSummaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/budget_Summary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MonthlyBudgetLayout"
        android:layout_width="411dp"
        android:layout_height="238dp"
        android:layout_marginTop="60dp"
        android:background="@color/lite_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/loansEditText"
            android:layout_width="166dp"
            android:layout_height="48dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="184dp"
            android:background="@color/lite_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/loansText"
            android:layout_width="123dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="184dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/budget_loans"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/EarningsText"
            android:layout_width="123dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="128dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/budget_earnings"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/incomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/budget_income"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/MonthlyBudgetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/budget_monthly"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/earningsEditText"
            android:layout_width="166dp"
            android:layout_height="48dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="128dp"
            android:background="@color/lite_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TotalIncomeLayout"
        android:layout_width="410dp"
        android:layout_height="82dp"
        android:background="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MonthlyBudgetLayout">

        <TextView
            android:id="@+id/totalIncomeTextView"
            android:layout_width="147dp"
            android:layout_height="48dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="16dp"
            android:background="@color/lite_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TotalIncomeText"
            android:layout_width="160dp"
            android:layout_height="51dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/budget_totalIncome"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ExpensesLayout"
        android:layout_width="413dp"
        android:layout_height="123dp"
        android:background="@color/lite_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalIncomeLayout">

        <TextView
            android:id="@+id/budget_TotalExpensesTextView"
            android:layout_width="147dp"
            android:layout_height="48dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="64dp"
            android:background="@color/lite_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalExpensesText"
            android:layout_width="177dp"
            android:layout_height="48dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/budget_totalExpenses"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ExpensesText"
            android:layout_width="134dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/budget_expenses"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/calculateExpensesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:text="@string/budget_calculateExpensesButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/surplusShortfallLayout"
        android:layout_width="410dp"
        android:layout_height="69dp"
        android:background="@color/lite_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExpensesLayout">

        <TextView
            android:id="@+id/surplusShortfallTextView"
            android:layout_width="147dp"
            android:layout_height="48dp"
            android:layout_marginStart="244dp"
            android:layout_marginTop="8dp"
            android:background="@color/lite_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/SurplusShortfallText"
            android:layout_width="201dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/budget_surplusShortfall"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>